# SocketChat

./: .SublProj.sublime-project  .gitignore  CMakeLists.txt
includes/ChatShared/: ChatMsgHeaders.h  ChatUtils.h
includes/SocketTools/: Client.hpp  Exceptions.h  Server.hpp  SocketIO.hpp
src/: CMakeLists.txt
src/ChatClient/: CMakeLists.txt  ChatClient.cpp  ChatClient.hpp  main.cpp
src/ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.hpp  ChatUserModel.h  main.cpp
src/ChatShared/: CMakeLists.txt  chatUtils.cpp
src/SocketTools/: CMakeLists.txt  Client.cpp  Server.cpp  SocketExceptions.cpp  SocketIO.cpp
